# rust_line_bot

./: .gitignore  README.md  docker-compose.yaml  package-lock.json  package.json
event_consumer/: Cargo.toml
event_consumer/src/: main.rs
event_consumer/src/executor/: parroting.rs
lib/: lambda-event-consumer-stack.ts
