[package]
name = "event_consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.8"
aws_lambda_events = "1.0.2"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
env_logger = "0.11.5"
lambda_runtime = "1.0.2"
log = "0.4.22"
reqwest = "0.13.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.49.0", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
